feat: Conditional steps
