# src/main/java/com/luscadevs/journeyorchestrator/domain/journey/StateType.java
@@ -1,7 +1,5 @@
 package com.luscadevs.journeyorchestrator.domain.journey;
 
 public enum StateType {
-    INITIAL,
-    NORMAL,
-    FINAL
+    INITIAL, INTERMEDIATE, FINAL
 }
